deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: sso
    app.kubernetes.io/name: sso
    component: server
  name: sso
  namespace: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sso
      app.kubernetes.io/name: sso
      component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sso
        app.kubernetes.io/name: sso
        component: server
    spec:
      restartPolicy: Always
      serviceAccountName: sso-sa
      serviceAccount: sso-sa
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      containers:
      - image: 'banzaicloud/dex-shim:0.6.0' #or quay.io/dexidp/dex:v2.26.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - name: http
            containerPort: 5556
            protocol: TCP
          - name: https
            containerPort: 5554
            protocol: TCP
          - name: grpc
            containerPort: 5557
            protocol: TCP
          - name: telemetry
            containerPort: 5558
            protocol: TCP
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
        - name: tls
          mountPath: /etc/dex/tls
      volumes:
      - name: config
        configMap:
          name: dex-config
          defaultMode: 420
      - name: tls
        secret:
          secretName: private-sso-tls
          defaultMode: 420
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
