service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso
  namespace: sso
  labels:
    app: sso
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 6443
      targetPort: grpc
  selector:
    app.kubernetes.io/instance: sso
    app.kubernetes.io/name: sso
    component: server
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
