route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sso
  namespace: sso
spec:
  host: sso.$(APPS_DOMAIN)
  path: /
  port:
    targetPort: https
  to:
    kind: Service
    name: sso
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
